--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/AmaRoTe4/ServidorVentaUTN#readme",
   "dependencies": {
+    "@google-cloud/debug-agent": "^7.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
